# UMICODE

./: .gitignore  CHANGELOG  LICENCE  MRDUMICODE_PROJECT.md  README.md  pyproject.toml
config/: default.yaml
docs/: Decisions  Roadmap  Specification  developer_guide.md  vision
examples/: generate_umis.py  inspect_umi_space.py
src/umicode/: __init__.py  anchor_design.py  config.py  design.py  exceptions.py  models.py  validators.py
tests/: test_anchor_design.py  test_config.py  test_design.py  test_models.py  test_validators.py
