[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "umicode"
version = "0.1.0"
description = "Error-aware duplex UMI design for long-read sequencing"
requires-python = ">=3.11"

dependencies = [
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]